byobu (5.99) unreleased; urgency=medium

  * usr/share/byobu/pixmaps/byobu.svg:
    - cleaned up vector image from Nobuto Murata

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 28 Oct 2015 09:48:49 +0900

byobu (5.98-0ubuntu1) xenial; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/vigpg:
    - specify stdin for input file
  * usr/bin/vigpg:
    - get vigpg working with the new release of gpg in wily
    - clean up encrypted copies of the file
  * usr/share/applications/byobu.desktop: LP: #1503418
    - use byobu icon rather than gnome-terminal

  [ Roman Inflianskas ]
  * usr/lib/byobu/include/config.py.in:
    - fix help for openSUSE

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 28 Oct 2015 09:48:44 +0900

byobu (5.97-0ubuntu1) wily; urgency=medium

  * usr/bin/byobu-launcher.in: LP: #1338260
    - fix byobu autolaunch for TERM=screen-256color users

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 31 Aug 2015 13:32:36 -0500

byobu (5.96-0ubuntu1) wily; urgency=medium

  * configure.ac, debian/install, debian/postinst, debian/postrm,
    etc/profile.d/Makefile.am, etc/profile.d/Z97-byobu.sh.in =>
    usr/share/byobu/profiles/Z97-byobu.sh.in, usr/bin/byobu.in,
    usr/bin/byobu-launcher-install.in,
    usr/lib/byobu/include/config.py.in,
    usr/share/byobu/profiles/Makefile.am:
    - fix some discrepancies between Z97- and Z98-

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 31 Aug 2015 12:33:09 -0500

byobu (5.95-0ubuntu1) wily; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/battery:
    - sum together all batteries
  * usr/bin/byobu.in:
    - ensure we start tmux with unicode support, LP: #1268072
  * usr/bin/byobu.in, usr/share/man/man1/byobu.1: LP: #1483394
    - byobu -h|--help enters manpage, place this code with -v|--version
  * usr/bin/byobu-shell.in: LP: #1458941
    - find the motd
  * usr/share/byobu/keybindings/f-keys.tmux.disable: LP: #1453037
    - ensure that we source user's keybindings