@@ -1,1 +1,2 @@
 etcdir = @sysconfdir@/profile.d
+etc_DATA = Z97-byobu.sh
