@@ -1,2 +1,2 @@
 profilesdir = $(datadir)/@PACKAGE@/profiles
-profiles_DATA = bashrc byoburc dircolors screenrc common tmux tmuxrc NONE Z97-byobu.sh
+profiles_DATA = bashrc byoburc dircolors screenrc common tmux tmuxrc NONE
